--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -54,7 +54,8 @@ the Effects
 of
 Scientific Information and Recommendations on Physicians Prescribing
 Behavior</a>" with Tuba
-Tun&ccedil;el </span><br>
+Tun&ccedil;el, revise and resubmit at <span style="font-style: italic;">Journal
+of Health Economics</span></span><br>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp; <br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf"
@@ -146,7 +147,7 @@ Adriana Hernandez-Perez and Marc Ivaldi</span> <span lang="EN-US"><br>
 </span>
 <ul style="font-family: Calibri;">
 </ul>
-<span style="font-weight: bold; font-family: Calibri;">Work in progress:</span><span
+<span style="font-weight: bold; font-family: Calibri;">Other work:</span><span
  style="font-family: Calibri;"> <br>
 <br>
 &nbsp;&nbsp;&nbsp; "Consumer Demand with
