--- a/Publications.htm
+++ b/Publications.htm
@@ -45,8 +45,8 @@ publications:</i></big></p>
 Targeted are Soda Taxes</span>?</a>" with Rachel Griffith and
 Martin O'Connell, forthcoming&nbsp;</span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">American
-Economic Review</span><span style="font-family: Calibri;"><span
- style="font-weight: bold;"> <br>
+Economic Review</span><span style="font-family: Calibri;">, 2020,
+110(11)<span style="font-weight: bold;"> <br>
 <br>
 </span>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
@@ -61,7 +61,9 @@ Morten Saethre, </span><span
  style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB">forthcoming</span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">Econometrica</span><span
- style="font-family: Calibri;"><span style="font-weight: bold;"> </span>&nbsp;&nbsp;&nbsp;</span>
+ style="font-family: Calibri;"><span style="font-weight: bold;">, </span></span><span
+ style="font-family: Calibri;">2020, 8<span style="font-weight: bold;">
+</span></span>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;">
   <small> </small>
 </ol>
