--- a/other.htm
+++ b/other.htm
@@ -275,7 +275,7 @@ Conferences</a></h3>
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - University of North Carolina, Chapell Hill,
-IO Virtual Seminar, 2020<br>
+IO Virtual Seminar, September 30, 2020<br>
 <o:p></o:p></span>
 <span style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - University of Vienna, Vienna Joint
