--- a/other.htm
+++ b/other.htm
@@ -287,8 +287,12 @@ Economics Seminar October 8, 2020<br>
 on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed
 2021)<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of California, Irvine,
+March 1, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CREST Paris, May 5, 2021<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;
 Past :
 </span>
 <p
