--- a/other.htm
+++ b/other.htm
@@ -273,15 +273,7 @@ Conferences</a></h3>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US"></span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - University of North Carolina, Chapell Hill,
-IO Virtual Seminar, September 30, 2020<br>
-<o:p></o:p></span>
-<span style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - University of Vienna, Vienna Joint
-Economics Seminar October 8, 2020<br>
-<o:p></o:p></span>
-<span style="font-family: Calibri;"></span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- MIT-TSE Conference
 on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed
@@ -297,7 +289,18 @@ Past :
 </span>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - University of Vienna, Vienna Joint
+Economics Seminar October 8, 2020<br>
+<o:p></o:p></span>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;" lang="EN-US"></span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - University of North Carolina, Chapell Hill,
+IO Virtual Seminar, September 30, 2020<br>
+<o:p></o:p></span>&nbsp;<span style="font-family: &quot;Calibri&quot;,sans-serif;"
+ lang="EN-US"></span><span style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;-</span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style=""></span></span><span
  style="font-family: Calibri;"></span><span
