--- a/other.htm
+++ b/other.htm
@@ -275,7 +275,8 @@ Conferences</a></h3>
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- MIT-TSE Conference
+&nbsp;&nbsp;&nbsp; &nbsp; - ASSA 2021 Virtual Meeting, January 4, 2021<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- MIT-TSE Conference
 on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed
 2021)<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
