--- a/contact.htm
+++ b/contact.htm
@@ -52,11 +52,10 @@ Research Fellow</p>
  style="font-family: Calibri;">&nbsp; &nbsp;&nbsp; </span>
 </p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<a
- style="color: rgb(0, 0, 0); text-decoration: none;" target="_blank"
- href="https://economics.harvard.edu/people/pierre-dubois">Visiting
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<span
+ style="color: rgb(0, 0, 0); text-decoration: none;">Visiting
 Professor, Harvard University, Department of Economics
-(2019-2020)</a></p>
+(2019-2020)</span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="color: rgb(0, 0, 0);">&nbsp;</span><a
