--- a/contact.htm
+++ b/contact.htm
@@ -49,13 +49,20 @@ Research Fellow</a>
 Research Fellow</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;">&nbsp; &nbsp;&nbsp; </span>
+ style="font-family: Calibri;">&nbsp;</span>Fellow
+of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="https://appliedeconometrics.org/about/fellows" target="_blank">International
+Association of Applied Econometrics</a></p>
+<span style="font-family: Calibri;"></span>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
+ style="font-family: Calibri;"> &nbsp;&nbsp; </span>
 </p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<span
  style="color: rgb(0, 0, 0); text-decoration: none;">Visiting
 Professor, Harvard University, Department of Economics
-(2019-2020)</span></p>
+(2015, 2019-2020)</span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="color: rgb(0, 0, 0);">&nbsp;</span><a
@@ -64,13 +71,7 @@ Professor, Harvard University, Department of Economics
  target="_blank">Institut
 Universitaire de France</a> Junior
 Member (2011-2015)</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;Fellow
-of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
- href="https://appliedeconometrics.org/about/fellows" target="_blank">International
-Association of Applied Econometrics</a></p>
-<span style="font-family: Calibri;">
-&nbsp;Scientific
+<span style="font-family: Calibri;">&nbsp;Scientific
 Director of the Toulouse School of Economics (2015-2019)
 </span><br style="font-family: Calibri;">
 <span style="font-family: Calibri;">&nbsp;Managing Editor of&nbsp;</span><a
