--- a/contact.htm
+++ b/contact.htm
@@ -24,9 +24,7 @@
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><font
  size="4">&nbsp;Pierre DUBOIS</font>&nbsp;</p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
- style="color: rgb(44, 19, 209);" target="_blank"
- href="https://economics.harvard.edu/people/pierre-dubois"></a></p>
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;Professor
 of Economics,&nbsp; <a style="color: rgb(44, 19, 209);" target="_blank"
@@ -73,8 +71,13 @@ Universitaire de France</a> Junior
 Member (2011-2015)</p>
 <span style="font-family: Calibri;">&nbsp;Scientific
 Director of the Toulouse School of Economics (2015-2019)
-</span><br style="font-family: Calibri;">
-<span style="font-family: Calibri;">&nbsp;Managing Editor of&nbsp;</span><a
+</span><br>
+<span style="font-family: Calibri;">&nbsp;Visiting Scholar, Department
+of Economics, Northwestern University (2010-2011)
+</span><br>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;Managing
+Editor of&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
  target="_blank">International Journal of Industrial
@@ -83,10 +86,12 @@ Organization</a><span style="font-family: Calibri;">
 &nbsp;Associate Editor of <a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.journals.elsevier.com/european-economic-review"
- target="_blank">European Economic Review</a> (2012-)<br>
+ target="_blank">European Economic Review</a>
+(2012-)<br>
 &nbsp;Associate Editor of <a
  style="text-decoration: none; color: rgb(0, 0, 0);"
- href="https://annals.ensae.fr/" target="_blank">Annals of Economics
+ href="https://annals.ensae.fr/" target="_blank">Annals
+of Economics
 and Statisctics</a> (2009-)</span><br style="font-family: Calibri;">
 <span style="font-family: Calibri;">
 &nbsp;E-mail:&nbsp;</span><a
