--- a/Publications.htm
+++ b/Publications.htm
@@ -15,18 +15,23 @@
 <body bgproperties="fixed"
  style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
  alink="#ff9900" link="#3300cc" vlink="#800080">
-<big> </big><big> </big><big> </big><big> </big><big> </big><big> </big>
+<big> </big><big>
+</big><big></big><big>
+</big><big></big><big>
+</big>
 <table
  style="font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"
  border="0" cellpadding="4" cellspacing="0" width="813">
   <tbody>
     <tr>
-      <td valign="top" width="328"><big> </big>
+      <td valign="top" width="328"><big>
+      </big>
       <h3
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt;"><big><a
  name="Publications"></a>Publications</big></h3>
       <big> </big></td>
-      <td width="465"><big> </big></td>
+      <td width="465"><big>
+      </big></td>
     </tr>
   </tbody>
 </table>
@@ -38,9 +43,10 @@ publications:</i></big></p>
 </ul>
 <big><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span></big><span
  style="font-family: Calibri;"> <br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="DuboisSaethreParallelTrade_2020.pdf" target="_blank">On the
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+"<a style="color: rgb(0, 0, 0); text-decoration: none;"
+ href="DuboisSaethreParallelTrade_2020.pdf" target="_blank">On
+the
 Effect of
 Parallel
 Trade on
@@ -61,12 +67,13 @@ Morten Saethre, </span><span
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="DuboisGriffithOConnell.pdf" target="_blank"><span
  style="color: rgb(0, 0, 0);">How Well
-Targeted are Soda Taxes</span>?</a>" with Rachel Griffith and
+Targeted are Soda Taxes</span>?</a>"
+with Rachel Griffith and
 Martin O'Connell,&nbsp;</span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">American
 Economic Review</span><span style="font-family: Calibri;">, 2020,
-110(11),<span style="font-weight: bold;"> </span>3661-3704<span
- style="font-weight: bold;"><br>
+110(11),<span style="font-weight: bold;">
+</span>3661-3704<span style="font-weight: bold;"><br>
 <br>
 </span>
 </span><span style="font-family: Calibri;"></span><span
@@ -77,10 +84,12 @@ of
 Front-of-Pack
 labels on the Nutritional Quality of Supermarket Food Purchases:
 Evidence from
-a Large-Scale Randomized Controlled Trial</a>&rdquo;, with P.
+a Large-Scale Randomized Controlled Trial</a>&rdquo;,
+with P.
 Albuquerque, O. Allais,
 P. Bertail, C. Bonnet, P. Chandon, P. Combris, S. Lahlou,
-N. Rigal, B. Ruffieux, forthcoming <b><i>Journal of the
+N. Rigal, B. Ruffieux, forthcoming <b><i>Journal
+of the
 Academy of
 Marketing Science<br>
 </i></b></span><br style="color: rgb(0, 0, 0); font-family: Calibri;">
@@ -127,7 +136,8 @@ Studies</span><span
 Design and
 Decision Rights in
 Vertical Structures</a><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">", with
+ style="color: rgb(0, 0, 0); font-family: Calibri;">",
+with
 Bruno Jullien,&nbsp;</span><span
  style="font-weight: bold; font-style: italic; color: rgb(0, 0, 0); font-family: Calibri;">Research
 in
@@ -164,7 +174,8 @@ Berndt,&nbsp;</span><span
  style="font-style: italic; font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;">International
 Journal of the&nbsp;Economics of Business</span><span
  style="font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"></span><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">, 2016,
+ style="color: rgb(0, 0, 0); font-family: Calibri;">,
+2016,
 23, 2,
 125-147 </span><br style="color: rgb(0, 0, 0); font-family: Calibri;">
 <span style="color: rgb(0, 0, 0); font-family: Calibri;"><br>
@@ -179,7 +190,8 @@ Scott Morton and Paul Seabright,&nbsp;&nbsp;</span><span
  style="font-style: italic; font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;">RAND
 Journal
 of Economics</span><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">, Vol 46,
+ style="color: rgb(0, 0, 0); font-family: Calibri;">,
+Vol 46,
 No 4, Winter 2015, 844-871</span><br
  style="color: rgb(0, 0, 0); font-family: Calibri;">
 <span style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB"><br>
@@ -190,7 +202,8 @@ within the Household: Spousal Peer Effects and
 Children&nbsp;Health Implications</span></a><span
  style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB">",
 with Chiara Canta,&nbsp;<span
- style="font-style: italic; font-weight: bold;">B.E. Journal
+ style="font-style: italic; font-weight: bold;">B.E.
+Journal
 of
 Economic Analysis and Policy (Topics), </span><span
  style="font-weight: bold;"></span>2015,
@@ -211,7 +224,8 @@ Rachel
 Griffith and&nbsp;Aviv Nevo,&nbsp;</span><i
  style="font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;">American
 Economic Review</i><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">, 2014,
+ style="color: rgb(0, 0, 0); font-family: Calibri;">,
+2014,
 104(3), 832-867</span><br
  style="color: rgb(0, 0, 0); font-family: Calibri;">
 <span style="color: rgb(0, 0, 0); font-family: Calibri;"><br>
@@ -387,7 +401,8 @@ Marc
 Ivaldi&nbsp;and
 Adriana
 Hernandez-Perez,&nbsp;<i><b>Journal
-of the European Economic Association</b></i>, April-May
+of the European Economic Association</b></i>,
+April-May
 2007, Vol. 5, No. 2-3: 390-399 </span><br
  style="color: rgb(0, 0, 0); font-family: Calibri;">
 <span
@@ -397,7 +412,8 @@ of the European Economic Association</b></i>, April-May
  href="http://www.jstor.org/discover/10.1086/379938?uid=3738016&amp;uid=2129&amp;uid=2&amp;uid=70&amp;uid=4&amp;sid=21104676568217"
  target="_blank">Rotten
 Parents and Child Labor</a><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">", with
+ style="color: rgb(0, 0, 0); font-family: Calibri;">",
+with
 Antoine Bommier, </span><i
  style="color: rgb(0, 0, 0); font-family: Calibri;"><b>Journal
 of
@@ -437,7 +453,8 @@ Journal of Agricultural Economics</span></i></b><i
  target="_blank">Optimal
 Regulation of Private Production Contracts with Environmental
 Externalities</a><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">", with
+ style="color: rgb(0, 0, 0); font-family: Calibri;">",
+with
 Philippe
 Bontems&nbsp;and Tom Vukina, </span><i
  style="color: rgb(0, 0, 0); font-family: Calibri;"><b>Journal
@@ -452,11 +469,12 @@ of Regulatory Economics</b>, <span lang="EN-GB">2004,
  href="http://dx.doi.org/10.1016/S0304-3878%2802%2900005-6"
  target="_blank">Moral Hazard, Land
 Fertility and Sharecropping in a Rural Area of the Philippines</a><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">", </span><i
- style="color: rgb(0, 0, 0); font-family: Calibri;"><b>Journal
+ style="color: rgb(0, 0, 0); font-family: Calibri;">",
+</span><i style="color: rgb(0, 0, 0); font-family: Calibri;"><b>Journal
 of Development Economics</b></i><span
  style="color: rgb(0, 0, 0); font-family: Calibri;">, </span><i
- style="color: rgb(0, 0, 0); font-family: Calibri;">Vol. 68,
+ style="color: rgb(0, 0, 0); font-family: Calibri;">Vol.
+68,
 Issue
 1, 35-64,
 June
@@ -468,8 +486,8 @@ June
  href="http://id.erudit.org/iderudit/007247ar" target="_blank">Consommation,
 Partage de Risque et Assurance Informelle: Mod&egrave;les
 Th&eacute;oriques et Tests Empiriques</a><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">", </span><i
- style="color: rgb(0, 0, 0); font-family: Calibri;"><b>L'Actualit&eacute;
+ style="color: rgb(0, 0, 0); font-family: Calibri;">",
+</span><i style="color: rgb(0, 0, 0); font-family: Calibri;"><b>L'Actualit&eacute;
 Economique, Revue d'Analyse Economique</b></i><span
  style="color: rgb(0, 0, 0); font-family: Calibri;">,
 Vol. 78, n&deg; 1, 115-149, Mars 2002</span><br
@@ -482,8 +500,8 @@ Vol. 78, n&deg; 1, 115-149, Mars 2002</span><br
 Agricoles
 en &Eacute;conomie du D&eacute;veloppement: Une Revue Critique
 des Th&eacute;ories et des Tests Empiriques</a><span
- style="color: rgb(0, 0, 0); font-family: Calibri;">", </span><i
- style="color: rgb(0, 0, 0); font-family: Calibri;"><b>Revue
+ style="color: rgb(0, 0, 0); font-family: Calibri;">",
+</span><i style="color: rgb(0, 0, 0); font-family: Calibri;"><b>Revue
 d'&Eacute;conomie du D&eacute;veloppement</b></i><span
  style="color: rgb(0, 0, 0); font-family: Calibri;">,
 2001, 3, 75-106</span><br
@@ -520,10 +538,8 @@ Mai 1999, 50, 3,
   <small> </small>
 </ol>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;">
-  <small></small>
 </ol>
 <ul style="color: rgb(0, 0, 0); font-family: Calibri;">
-  <small></small>
 </ul>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"><i><a
@@ -566,14 +582,12 @@ December 2009, 273-290</span><span
  style="color: rgb(0, 0, 0); font-family: Calibri;" class=""><br>
 <br>
 &nbsp;&nbsp;&nbsp; "<a
+ style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri; background-color: rgb(255, 255, 255);"
  href="http://www3.interscience.wiley.com/journal/4079/home"
  target="_blank"><span style="color: rgb(0, 0, 0);">Introduction
-to </span>t</a></span><a
- style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;"
- href="http://www3.interscience.wiley.com/journal/4079/home"
- target="_blank">he Special Issue on the Econometrics
+to the Special Issue on the Econometrics
 of
-Auctions</a><span style="font-family: Calibri;">",&nbsp;with
+Auctions</span></a><span style="font-family: Calibri;">",&nbsp;with
 Marc Ivaldi and
 Thierry Magnac, </span><span
  style="font-style: italic; font-weight: bold; font-family: Calibri;">Journal
@@ -654,17 +668,16 @@ September 2005, No 2</span>
   <ul>
     <small> </small>
   </ul>
-  <small></small>
 </ul>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; color: rgb(0, 0, 0); font-family: Calibri;"><span
- style="font-weight: bold;"></span><small></small></p>
+ style="font-weight: bold;"></span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; color: rgb(0, 0, 0); font-family: Calibri;"><span
  style="font-weight: bold;"></span></p>
 <big><span
  style="font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"><span
  style="font-weight: bold;"></span>
-</span></big>
+</span></big></span>
 </body>
 </html>
