--- a/other.htm
+++ b/other.htm
@@ -18,6 +18,9 @@
 <b style="font-family: Calibri;"><a name="Journalediting"></a>Editorial
 service:</b>
 <ul style="font-family: Calibri;" msimagelist="">
+  <li>Co-Editor, <a href="https://academic.oup.com/jeea"
+ target="_blank">Journal of the European Economic Association</a>, 2021
+-</li>
   <li>Managing Editor of <a
  href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
  target="_blank">International Journal of Industrial
@@ -25,13 +28,10 @@ Organization</a>,&nbsp;2013-2018</li>
   <li>Associate
 Editor of <a
  href="http://www.journals.elsevier.com/european-economic-review/"
- target="_blank">European Economic Review</a>,
-since
-2012</li>
+ target="_blank">European Economic Review</a>,&nbsp;2012-</li>
   <li> Associate
 Editor of <a href="http://annales.ensae.fr/" target="_blank">Annals
-of Economics and Statistics</a>,
-since 2009</li>
+of Economics and Statistics</a>,&nbsp;2009-</li>
   <li> Co-editor
 of <a href="http://expertise.hec.ca/actualiteeconomique/"
  target="_blank">L'Actualit&eacute;
@@ -315,7 +315,7 @@ Congress of the Econometric Society, August 21 2020</span></p>
  style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Keynote Lecture, LACEA Health
 Economics Network in Latin America, Lima,
-Peru, May 18-19, 2020 (postponed)</span><span
+Peru, May 18-19, 2020 (postponed to 2021)</span><span
  style="font-family: Calibri;">&nbsp;</span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
