--- a/other.htm
+++ b/other.htm
@@ -75,7 +75,7 @@ Conferences</a></h3>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 of MIT-TSE
-Confrence on Health Economics with Amy Finkelstein and Jean Tirole,
+Conference on Health Economics with Amy Finkelstein and Jean Tirole,
 MIT,&nbsp;(postponed). <a
  href="mit-tse_provisionalprogram_12nov2020.pdf" target="_blank">Program</a>.&nbsp;</p>
   </li>
@@ -298,7 +298,7 @@ Economics Seminar October 8, 2020<br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US"></span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - University of North Carolina, Chapell Hill,
+&nbsp;&nbsp;&nbsp; &nbsp; - University of North Carolina, Chapel Hill,
 IO Virtual Seminar, September 30, 2020<br>
 <o:p></o:p></span>&nbsp;<span style="font-family: &quot;Calibri&quot;,sans-serif;"
  lang="EN-US"></span><span style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
