--- a/contact.htm
+++ b/contact.htm
@@ -39,7 +39,7 @@ of Toulouse
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;">&nbsp;Co-Editor, <a
  href="https://academic.oup.com/jeea" target="_blank">Journal of the
-European Eocnomic Association</a></span></p>
+European Economic Association</a></span></p>
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</font><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="http://www.ifs.org.uk/people/profile/377" target="_blank">IFS
@@ -66,19 +66,24 @@ Professor, Harvard University, Department of Economics
 (2015, 2019-2020)</span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
+ style="font-family: Calibri;">&nbsp;Scientific
+Director of the Toulouse School of Economics (2015-2019)
+</span><br>
+<span style="font-family: Calibri;"></span></p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="color: rgb(0, 0, 0);">&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html"
  target="_blank">Institut
 Universitaire de France</a> Junior
 Member (2011-2015)</p>
-<span style="font-family: Calibri;">&nbsp;Scientific
-Director of the Toulouse School of Economics (2015-2019)
-</span><br>
-<span style="font-family: Calibri;">&nbsp;Visiting Scholar, Department
+<span style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">Visiting Scholar, Department
 of Economics, Northwestern University (2010-2011)
-</span><br>
-<span style="font-family: Calibri;"></span><span
+<br>
+<br>
+</span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;Managing
 Editor of&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
@@ -95,7 +100,7 @@ Organization</a><span style="font-family: Calibri;">
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://annals.ensae.fr/" target="_blank">Annals
 of Economics
-and Statisctics</a> (2009-)</span><br style="font-family: Calibri;">
+and Statistics</a> (2009-)</span><br style="font-family: Calibri;">
 <span style="font-family: Calibri;">
 &nbsp;E-mail:&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
@@ -136,7 +141,10 @@ Vox page</a></font>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">Address:
-Toulouse School of Economics</p>
+<small><small></small></small></p>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><small><small></small></small>Toulouse
+School of Economics</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">1
 Esplanade de l'Universit&eacute;</p>
