--- a/contact.htm
+++ b/contact.htm
@@ -34,11 +34,13 @@ School of Economics</a><span style="color: rgb(0, 0, 0);">,&nbsp;</span><a
  href="http://www.ut-capitole.fr/">University
 of Toulouse
 1 Capitole</a><br>
+<br>
 </p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;">&nbsp;Co-Editor, <a
- href="https://academic.oup.com/jeea" target="_blank">Journal of the
+ href="https://academic.oup.com/jeea" target="_blank">Journal
+of the
 European Economic Association</a></span></p>
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</font><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
@@ -79,7 +81,8 @@ Director of the Toulouse School of Economics (2015-2019)
 Universitaire de France</a> Junior
 Member (2011-2015)</p>
 <span style="font-family: Calibri;">&nbsp;</span><span
- style="font-family: Calibri;">Visiting Scholar, Department
+ style="font-family: Calibri;">Visiting Scholar,
+Department
 of Economics, Northwestern University (2010-2011)
 <br>
 <br>
@@ -141,9 +144,9 @@ Vox page</a></font>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">Address:
-<small><small></small></small></p>
+</p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><small><small></small></small>Toulouse
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">Toulouse
 School of Economics</p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">1
