--- a/contact.htm
+++ b/contact.htm
@@ -35,13 +35,18 @@ School of Economics</a><span style="color: rgb(0, 0, 0);">,&nbsp;</span><a
 of Toulouse
 1 Capitole</a><br>
 <br>
+<br>
+<br>
+<span style="font-family: Calibri;"></span>
 </p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;">&nbsp;Co-Editor, <a
  href="https://academic.oup.com/jeea" target="_blank">Journal
 of the
-European Economic Association</a></span></p>
+European Economic Association</a></span>
+(2021-)<br>
+</p>
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</font><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="http://www.ifs.org.uk/people/profile/377" target="_blank">IFS
@@ -61,6 +66,9 @@ Association of Applied Econometrics</a></p>
 <span style="font-family: Calibri;"></span>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
+<br>
+<br>
+<span style="font-family: Calibri;"></span>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<span
  style="color: rgb(0, 0, 0); text-decoration: none;">Visiting
