--- a/Publications.htm
+++ b/Publications.htm
@@ -16,22 +16,19 @@
  style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
  alink="#ff9900" link="#3300cc" vlink="#800080">
 <big> </big><big>
-</big><big></big><big>
-</big><big></big><big>
+</big><big></big><big></big><big></big><big>
 </big>
 <table
  style="font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"
  border="0" cellpadding="4" cellspacing="0" width="813">
   <tbody>
     <tr>
-      <td valign="top" width="328"><big>
-      </big>
+      <td valign="top" width="328"><big> </big>
       <h3
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt;"><big><a
  name="Publications"></a>Publications</big></h3>
       <big> </big></td>
-      <td width="465"><big>
-      </big></td>
+      <td width="465"><big> </big></td>
     </tr>
   </tbody>
 </table>
@@ -55,7 +52,7 @@ with
 Morten Saethre, </span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">Econometrica</span><span
  style="font-family: Calibri;"><span style="font-weight: bold;">, </span></span><span
- style="font-family: Calibri;">2020, 8, 2503-2545<span
+ style="font-family: Calibri;">2020, 88, 6, 2503-2545<span
  style="font-weight: bold;">
 </span></span>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;">
