--- a/Publications.htm
+++ b/Publications.htm
@@ -16,8 +16,7 @@
  style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);"
  alink="#ff9900" link="#3300cc" vlink="#800080">
 <big> </big><big>
-</big><big></big><big></big><big></big><big>
-</big>
+</big><big></big><big></big><big></big><big></big>
 <table
  style="font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"
  border="0" cellpadding="4" cellspacing="0" width="813">
@@ -40,6 +39,18 @@ publications:</i></big></p>
 </ul>
 <big><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span></big><span
  style="font-family: Calibri;"> <br>
+</span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+</span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
+"<a style="color: rgb(0, 0, 0); text-decoration: none;"
+ href="../../../ADMINIST/web/pierredubois.github.io/dls.pdf"
+ target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
+Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
+Straub,</span> </span><span style="font-family: Calibri;">forthcoming <span
+ style="font-style: italic; font-weight: bold;">European</span></span><span
+ style="font-style: italic; font-family: Calibri;"><span
+ style="font-weight: bold;">
+Economic Review</span><br>
+<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 "<a style="color: rgb(0, 0, 0); text-decoration: none;"
  href="DuboisSaethreParallelTrade_2020.pdf" target="_blank">On
