--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -36,17 +36,7 @@ papers:</i></p>
 Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
 Gandhi
 and Shoshana Vasserman<br>
-<br>
-</span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
-"<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf"
- target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
-Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
-Straub,</span> </span><span style="font-family: Calibri;">revise and
-resubmit
-at <span style="font-style: italic;">European</span></span><span
- style="font-style: italic; font-family: Calibri;">
-Economic Review<br>
-<br>
+</span></span><span style="font-style: italic; font-family: Calibri;"><br>
 </span><span style="font-family: Calibri;">&nbsp; &nbsp; "<a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="duboistunceljune2020.pdf" target="_blank">Identifying
