--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -77,8 +77,8 @@ Econometric Model</a>", with Sandra
 Jodar,
 revise and resubmit at </span><span
  style="font-style: italic; font-family: Calibri;">Quantitative
-Economics</span><span style="font-family: Calibri;"><span lang="EN-US"></span>
-<br>
+Economics</span><span style="font-family: Calibri;"><span lang="EN-US"></span>,
+CEPR DP 7847<br>
 <br>
 &nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;"
@@ -92,7 +92,7 @@ C&eacute;line Bonnet <br>
  href="nutrition_risk_sharing.pdf" target="_blank">Nutrition
 and Risk Sharing within the
 Household</a><span style="font-family: Calibri;">", with Ethan
-Ligon <br>
+Ligon, CEPR 7574<br>
 <br>
 &nbsp;&nbsp;&nbsp; &nbsp;"</span><a
  style="text-decoration: none; font-family: Calibri;"
@@ -122,19 +122,22 @@ Statistics</i><br style="font-family: Calibri;">
  href="risk_het.pdf" target="_blank">Heterogeneity
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
 on the Limits to Risk Sharing in Rural Pakistan</a><span
- style="font-family: Calibri;">" <span class="style1style2style9"
- lang="EN-GB"><br>
+ style="font-family: Calibri;">" CEPR DP 6004<span lang="EN-US"><br>
 <br>
-&nbsp;&nbsp;&nbsp; &ldquo;</span><span lang="EN-US"><a
- style="color: rgb(0, 0, 0); text-decoration: none;"
+<br>
+<span style="font-weight: bold;">Permanent Working Papers:<br>
+<br style="font-weight: bold;">
+</span></span></span><span style="font-family: Calibri;"><span
+ class="style1style2style9" lang="EN-GB">&nbsp;&nbsp;&nbsp; &ldquo;</span><span
+ lang="EN-US"><a style="color: rgb(0, 0, 0); text-decoration: none;"
  href="Academic-Journals_031106.pdf" target="_blank">Academic
 Journals as Two-Sided Platforms:
 Empirical Evidence from Data on French Libraries</a>&rdquo;,
 with
-Adriana Hernandez-Perez and Marc Ivaldi</span> <span lang="EN-US"><br>
-<br>
-</span></span><span style="font-family: Calibri;"><br>
-</span>
+Adriana Hernandez-Perez and Marc Ivaldi</span>, CEPR DP 5990<span
+ lang="EN-US"><br>
+</span></span><br>
+<span style="font-family: Calibri;"></span>
 <ul style="font-family: Calibri;">
 </ul>
 <span style="font-weight: bold; font-family: Calibri;">Other work:</span><span
@@ -157,8 +160,8 @@ Val&eacute;rie Orozco <br>
 &nbsp;&nbsp;&nbsp; "Non
 Parametric Decomposition of the Distributional Change of Body Mass
 Index in China", with Ju Qiu <br>
-&nbsp;
-</span>
+&nbsp;<br>
+&nbsp;</span>
 <ul style="font-family: Calibri;">
 </ul>
 <i style="font-family: Calibri;">
