--- a/Publications.htm
+++ b/Publications.htm
@@ -86,8 +86,8 @@ Economic Review</span><span style="font-family: Calibri;">, 2020,
 </span>
 </span><span style="font-family: Calibri;"></span><span
  style="color: rgb(0, 0, 0); font-family: Calibri;" lang="EN-GB">&nbsp;&nbsp;&nbsp;
-"<a style="text-decoration: none; color: rgb(0, 0, 0);"
- href="https://link.springer.com/content/pdf/10.1007/s11747-020-00723-5.pdf">Effects
+"<a target="_blank" style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="Dubois2021_Article_EffectsOfFront-of-packLabelsOn.pdf">Effects
 of
 Front-of-Pack
 labels on the Nutritional Quality of Supermarket Food Purchases:
@@ -96,10 +96,10 @@ a Large-Scale Randomized Controlled Trial</a>&rdquo;,
 with P.
 Albuquerque, O. Allais,
 P. Bertail, C. Bonnet, P. Chandon, P. Combris, S. Lahlou,
-N. Rigal, B. Ruffieux, forthcoming <b><i>Journal
+N. Rigal, B. Ruffieux,&nbsp;<b><i>Journal
 of the
 Academy of
-Marketing Science<br>
+Marketing Science</i></b>, 2021, 49:119-138<b><i><br>
 </i></b></span><br style="color: rgb(0, 0, 0); font-family: Calibri;">
 <span style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 "<a style="text-decoration: none; color: rgb(0, 0, 0);"
