--- a/other.htm
+++ b/other.htm
@@ -278,6 +278,9 @@ Conferences</a></h3>
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of California, Irvine,
 March 1, 2021<br>
+</span><span style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of
+Massachusetts, Amherst, April 9, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CREST Paris, May 5, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
@@ -326,9 +329,7 @@ Peru, May 18-19, 2020 (postponed to 2021)</span><span
 &nbsp;&nbsp;- University of Wisconsin, Madison, April 15, 2020
 (postponed)</span><br style="font-family: Calibri;">
 <span style="font-family: Calibri;" lang="EN-US"></span><span
- style="font-family: Calibri;" lang="EN-US">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of
-Massachusetts, Amherst, March 27, 2020 (postponed)</span><span
+ style="font-family: Calibri;" lang="EN-US"></span><span
  style="font-family: Calibri;"></span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
